fixed pagination background color on mobile; closed mobile menu when using search function

--- a/src/components/MobileMenu/MobileMenu.module.css
+++ b/src/components/MobileMenu/MobileMenu.module.css
@@ -12,8 +12,8 @@
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 4px;
+    right: 25px;
     z-index: 3;
 }
 
