--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -61,7 +61,7 @@ i {
         display: none;
     }
 
-    .mobileIconContainer,
+    .mobileNavIconContainer,
     .listItem {
         padding: 0.5rem 0.8rem;
         margin: 0;
