--- a/src/components/StoryList/StoryList.module.css
+++ b/src/components/StoryList/StoryList.module.css
@@ -59,10 +59,14 @@
 @media all and (max-width: 850px) {
     .listItem {
         padding: 0.3em 0.6em;
-        transition: all 200ms ease-in-out;
-        border-radius: 8px;
-        background-color: rgba(34, 34, 34, 0.1);
-        letter-spacing: 0.5px;
+    }
+
+    .listItem:hover,
+    .active {
+        cursor: pointer;
+        background-color: rgba(34, 34, 34, 0.3);
+        color: var(--accent-color);
+        transform: scale(1.1);
     }
 
     .trendingPageStyles {
